# traffic_signs_detection

./: .gitignore  app.py  docker-compose.yml  main.py  model_extension_comparison.ipynb  requirements.txt  traffic-signs-detection-kaggle.ipynb  traffic_signs_detection.ipynb
annotated-images/: annotated_file
frontend/: app.py  dockerfile  pyproject.toml
server/: dockerfile  main.py  pyproject.toml  scan_imports.py
