[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Ibrahim Al Ghafri <ibrahim.ghafri@rihal.om>"]

[tool.poetry.dependencies]
python = "^3.10"
ultralytics = "^8.3.58"
uvicorn = "^0.34.0"
fastapi = "^0.115.6"
pillow = "^11.1.0"
numpy = ">=1.23.0,<2.0.0"
streamlit = "^1.41.1"
python-multipart = "^0.0.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
